--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ version: '3.9'
 services:
   backend:
     build: .
+    env_file:
+      - .env
     ports:
       - "8000:8000"
-    environment:
-      - "DATABASE_URL=${DATABASE_URL}"
     depends_on:
       - "db"
 
